kubernetes-volumes/deployment.yaml
# emptyDir заменён на PVC, а ConfigMap примонтирован как volume в /homework/conf.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-web
  namespace: homework
  labels:
    app: homework-web

spec:
  replicas: 3

  selector:
    matchLabels:
      app: homework-web

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: homework-web

    spec:
      nodeSelector:
        homework: "true"

      restartPolicy: Always

      volumes:
        # Персистентный том вместо emptyDir
        - name: homework-volume
          persistentVolumeClaim:
            claimName: homework-pvc   # Имя PVC из pvc.yaml
        # ConfigMap, примонтированный как volume в основной контейнер
        - name: homework-config
          configMap:
            name: homework-config     # Имя ConfigMap из cm.yaml.

      containers:
        - name: web
          image: python:3.12-alpine
          command:
            - sh
            - -c
            - |
              cd /homework && python -m http.server 8000
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: homework-volume
              mountPath: /homework
            - name: homework-config
              mountPath: /homework/conf

          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html
